# c-undefined

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  shell.nix
src/: main.c
tools/: run.sh
